# src/app/module/auth/auth.validation.ts
@@ -34,8 +34,31 @@ const UserLoginZodSchema = z.object({
     .regex(/[^A-Za-z0-9]/, "Password must contain atleast 1 Special Character"),
 });
 
+const UserForgotPasswordZodSchema = z.object({
+  email: z.email("Invalid email address"),
+});
+
+const UserResetPasswordZodSchema = z.object({
+  email: z.email("Invalid email address"),
+
+  otp: z.string().length(6, "OTP must be exactly 6 digits"),
+
+  newPassword: z
+    .string()
+    .min(8, "Password must be at least 8 characters long")
+    .regex(/[a-z]/, "Password must contain at least 1 lowercase letter")
+    .regex(/[A-Z]/, "Password must contain at least 1 uppercase letter")
+    .regex(/[0-9]/, "Password must contain at least 1 number")
+    .regex(
+      /[^A-Za-z0-9]/,
+      "Password must contain at least 1 special character",
+    ),
+});
+
 export const UserValidation = {
   UserRegistrationZodSchema,
   UserEmailVerifyZodSchema,
   UserLoginZodSchema,
+  UserForgotPasswordZodSchema,
+  UserResetPasswordZodSchema,
 };
